manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $IMAGE_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $IMAGE_NAME
  template:
    metadata:
      labels:
        app: $IMAGE_NAME
    spec:
      containers:
        - name: $IMAGE_NAME
          image: $REGISTRY_URL/$IMAGE_NAME:$TAG_NAME
          ports:
            - containerPort: 3000
